# ProgrammingLanguages

./: lazy_string.cpp  lazy_string.h  main.c
task1/: main.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task4/: CMakeLists.txt  format.cpp  format.h
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
